--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <!-- second section ends -->
     <footer class="footer">
-        <h6>made by - Basavaraj Madiwalar </h6>
+        <h6>Made by - Basavaraj Madiwalar </h6>
     </footer>
 </body>
 
