--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="./assets/pexels-mister-mister-3434523.jpg" alt="">
             </div>
         </div>
-        <div class="outer-section" style="justify-content: left;">
+        <div class="outer-section">
             <div class="sec-row">
                 <span class="heading">LOREM IPSUM</span>
                 <span class="lower-heading">LOREM IPSUM <br> SET ADEMIR</span>
