--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -24,6 +25,7 @@
             <li>Contact Us</li>
             <li><i class="fa fa-reorder"></i></li>
         </ul>
+
     </div>
     <!-- navbar ends -->
     <!-- hero section start -->
@@ -68,13 +70,14 @@
                 <img src="./assets/pexels-mister-mister-3434523.jpg" alt="">
             </div>
         </div>
-        <div class="outer-section">
+        <div class="outer-section" style="justify-content: left;">
             <div class="sec-row">
                 <span class="heading">LOREM IPSUM</span>
                 <span class="lower-heading">LOREM IPSUM <br> SET ADEMIR</span>
                 <span class="click"> Click <i class="fa fa-arrows-h"></i></span>
             </div>
         </div>
+
     </div>
     <!-- second section ends -->
     <footer class="footer">
